<resources>
    <string name="app_name">IMoodMeter</string>
    <string name="memories_page_title">Memories</string>
    <string name="record_page_title">Mood</string>
    <string name="summary_page_title">Summary</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="description">Write a description here</string>
    <string name="upload_button">Upload Media</string>
    <string name="reselect">Reselect</string>
    <string name="save_button">Save</string>
    <string name="add_memory_button_hint">Add memory</string>
    <string name="memory_screen_title">Memories</string>
    <string name="image_selected">Image selected:</string>


    <string name="fa_icon_areachart">&#xf1fe;</string>
    <string name="fa_icon_piechart">&#xf200;</string>
    <string name="fa_icon_linechart">&#xf201;</string>
</resources>